--- a/includes/header.html
+++ b/includes/header.html
@@ -1,7 +1,7 @@
 <div class="socialIcons">
   <a href="https://github.com/paluka" target="_blank" title="GitHub"
     ><img
-      src="https://www.erikpaluka.com//img/socialIcons//github.png"
+      src="https://erikpaluka.com//img/socialIcons//github.png"
       width="56"
       height="25"
       alt="GitHub Account"
@@ -12,7 +12,7 @@
     target="_blank"
     title="Google Scholar"
     ><img
-      src="https://www.erikpaluka.com//img/socialIcons//googleScholar.png"
+      src="https://erikpaluka.com//img/socialIcons//googleScholar.png"
       width="25"
       height="25"
       alt="Google Scholar Account"
@@ -23,7 +23,7 @@
     target="_blank"
     title="LinkedIn"
     ><img
-      src="https://www.erikpaluka.com//img/socialIcons//LinkedIn_IN_Icon_25px.png"
+      src="https://erikpaluka.com//img/socialIcons//LinkedIn_IN_Icon_25px.png"
       width="25"
       height="25"
       alt="LinkedIn Account"
@@ -31,7 +31,7 @@
 
   <a href="https://twitter.com/ErikPaluka" target="_blank" title="Twitter"
     ><img
-      src="https://www.erikpaluka.com//img/socialIcons//twitter.png"
+      src="https://erikpaluka.com//img/socialIcons//twitter.png"
       width="25"
       height="25"
       alt="Twitter Account"
@@ -42,7 +42,7 @@
     target="_blank"
     title="flickr"
     ><img
-      src="https://www.erikpaluka.com//img/socialIcons//flickr-25px.jpg"
+      src="https://erikpaluka.com//img/socialIcons//flickr-25px.jpg"
       width="25"
       height="25"
       alt="flickr Account"
@@ -54,7 +54,7 @@
     title="vialab Research Group"
   >
     <img
-      src="https://www.erikpaluka.com//img/socialIcons//vialab.png"
+      src="https://erikpaluka.com//img/socialIcons//vialab.png"
       width="70"
       height="25"
       alt="vialab Research Group Profile Page"
@@ -64,7 +64,7 @@
 
 <div id="nameHeader" itemscope itemtype="https://schema.org/Person">
   <div id="nameTitle">
-    <a href="https://www.erikpaluka.com/">
+    <a href="https://erikpaluka.com/">
       <span itemprop="name">Erik Paluka</span
       ><span style="font-size: 50%">, M.Sc. in Computer Science</span>
 
@@ -82,15 +82,13 @@
     <h2 class="hide">Site menu:</h2>
     <a class="nav-item" itemprop="name" href="/contact/">Contact</a>
     <a class="nav-item" itemprop="name" href="/images/">Images</a>
-    <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/projects/">Projects</a>-->
+    <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
     <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
     <a class="nav-item" itemprop="name" href="/research/">Research</a>
-    <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/bio/">Bio</a>-->
-    <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/blog/">Blog</a>-->
-    <!--<a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/algorithms/">Algorithms</a>-->
+    <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>-->
+    <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
+    <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
-    <a class="nav-item" itemprop="name" href="https://www.erikpaluka.com/"
-      >Home</a
-    >
+    <a class="nav-item" itemprop="name" href="https://erikpaluka.com/">Home</a>
   </div>
 </div>
