--- a/includes/header.html
+++ b/includes/header.html
@@ -85,7 +85,9 @@
     <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/projects/">Projects</a>-->
     <a class="nav-item" itemprop="name" href="/publications/">Publications</a>
     <a class="nav-item" itemprop="name" href="/research/">Research</a>
-    <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/">Bio</a>-->
+    <a class="nav-item" itemprop="name" href="https://erikpaluka.com/bio/"
+      >Bio</a
+    >
     <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/blog/">Blog</a>-->
     <!--<a class="nav-item" itemprop="name" href="https://erikpaluka.com/algorithms/">Algorithms</a>-->
 
