--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,9 @@ video {
   font-size: 16px;
   font: inherit;
   vertical-align: baseline;
-} /* HTML5 display-role reset for older browsers */
+}
+
+/* HTML5 display-role reset for older browsers */
 article,
 aside,
 details,
@@ -100,17 +102,21 @@ nav,
 section {
   display: block;
 }
+
 body {
   line-height: 1;
 }
+
 ol,
 ul {
   list-style: none;
 }
+
 blockquote,
 q {
   quotes: none;
 }
+
 blockquote:before,
 blockquote:after,
 q:before,
@@ -118,6 +124,7 @@ q:after {
   content: "";
   content: none;
 }
+
 table {
   border-collapse: collapse;
   border-spacing: 0;
@@ -155,7 +162,7 @@ img {
   background-color: #f2f2f2;
 }
 
-ol > li {
+ol>li {
   list-style-type: decimal;
 }
 
@@ -193,6 +200,7 @@ a:visited {
   color: #0082d1;
   text-decoration: none;
 }
+
 a:hover,
 a:active {
   color: #003580;
@@ -296,6 +304,7 @@ a:active {
   float: none;
   padding-bottom: 10px;
 }
+
 .nav-item,
 .nav-item-current {
   font-size: 120%;
@@ -318,6 +327,7 @@ a:active {
   color: #000;
   border-bottom: 2px solid #0082d1;
 }
+
 .nav-item-current,
 .nav-item-current:hover,
 .nav-item-current:visited {
@@ -375,12 +385,14 @@ a:active {
   float: left;
   left: -70px;
 }
+
 .socialIcons {
   position: relative;
   top: 4px;
   float: right;
   z-index: 100;
 }
+
 .socialIcons img {
   margin: 5px 5px 10px 5px;
   -moz-transition-property: opacity;
@@ -403,6 +415,7 @@ a:active {
 
   background-color: transparent;
 }
+
 .socialIcons img:hover {
   opacity: 1;
   filter: alpha(opacity=100);
@@ -435,12 +448,25 @@ a:active {
 
 /* index.php */
 
-#twitterContainer {
+#twitterWrapper {
   float: left;
   margin-left: 30px;
   width: 420px;
   height: 302px;
-  background-color: #e8e8e8;
+}
+
+#twitterTitle {
+  font-size: 21px;
+  border-bottom: 1px solid #e8e8e8;
+  padding: 12px;
+  line-height: 18px;
+}
+
+#twitterContainer {
+  float: left;
+  width: 420px;
+  height: 264px;
+  overflow: hidden;
 }
 
 /* News */
@@ -457,23 +483,26 @@ a:active {
   overflow: hidden;
   border-bottom: 1px #eee solid;
 }
+
 #NewsTitle {
   font-size: 21px;
   border-bottom: 1px solid #e8e8e8;
   padding: 12px;
   line-height: 18px;
 }
+
 .NewsDate {
   float: left;
   width: 20%;
 }
+
 .NewsText {
   float: left;
   width: 80%;
   margin-bottom: 10px;
 }
 
-.NewsText > a {
+.NewsText>a {
   font-weight: 700;
   color: #00b430;
 }
@@ -610,11 +639,13 @@ a:active {
   text-align: center;
   top: 10px;
 }
+
 .button:hover,
 .button:focus {
   background: #66b3ff;
   border-color: #66b3ff;
 }
+
 .button:active {
   background: #4dff4d;
   border-color: #4dff4d;
@@ -626,16 +657,19 @@ a:active {
   font-style: italic;
   font-weight: bold;
 }
+
 /* Table of Contents (toc) for Papers */
 #toc {
   width: 550px;
   margin: auto;
   overflow: hidden;
 }
+
 #toc ul {
   overflow: hidden;
   list-style-type: disc;
 }
+
 #toc li {
   float: left;
   margin-left: 20px;
@@ -676,8 +710,10 @@ a:active {
 #CCPosterImg {
   float: left;
   transform: rotate(-10deg);
-  -ms-transform: rotate(-10deg); /* IE 9 */
-  -webkit-transform: rotate(-10deg); /* Safari and Chrome */
+  -ms-transform: rotate(-10deg);
+  /* IE 9 */
+  -webkit-transform: rotate(-10deg);
+  /* Safari and Chrome */
 }
 
 #TLLImg {
@@ -725,6 +761,7 @@ a:active {
   margin: 15px;
   padding: 10px;
 }
+
 .researchContent {
   margin-top: 50px;
   max-height: 20000px;
@@ -733,6 +770,7 @@ a:active {
 #SMTImg {
   float: right;
 }
+
 /* ForcePad */
 
 #forcePadImg {
@@ -774,12 +812,15 @@ a:active {
 .slider {
   margin-left: 350px;
 }
+
 #begDate {
   width: 80px;
 }
+
 #endDate {
   width: 80px;
 }
+
 #maxResults {
   width: 30px;
 }
@@ -797,10 +838,12 @@ a:active {
   font-weight: 700;
   padding: 10px;
 }
+
 #midpointText table {
   margin: auto;
   text-align: center;
 }
+
 #midpointText input {
   max-width: 40px;
 }
@@ -814,6 +857,7 @@ a:active {
   float: left;
   max-width: 400px;
 }
+
 .tube {
   margin-top: 30px;
   text-align: center;
@@ -845,6 +889,7 @@ a:active {
 #filmRoll div:first-child img {
   border-top: 0px solid #000;
 }
+
 /* Blog */
 #blog {
   width: 600px;
@@ -961,6 +1006,7 @@ a:active {
 .paperLink {
   margin-left: 15px;
 }
+
 .seperator {
   width: 100%;
   border-color: rgb(99, 167, 14);
@@ -1003,9 +1049,11 @@ a:active {
   margin-bottom: 15px;
   min-height: 85px;
 }
+
 .pLocation {
   font-size: 0.9em;
 }
+
 #newsFrame {
   width: 100%;
   height: 258px;
@@ -1142,6 +1190,7 @@ span.hl-bright {
   font-weight: bold;
   text-align: center;
 }
+
 .maxWidthCenter {
   max-width: 500px;
   margin: auto;
@@ -1246,6 +1295,7 @@ span.hl-bright {
   background-color: rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 }
+
 .upFont {
   font-size: 1.1em;
 }
@@ -1276,6 +1326,7 @@ span.hl-bright {
 }
 
 @media (max-device-width: 500px) {
+
   .nav-item,
   .nav-item-current {
     margin-left: 15px;
