--- a/css/style.css
+++ b/css/style.css
@@ -103,10 +103,6 @@ section {
   display: block;
 }
 
-body {
-  line-height: 1;
-}
-
 ol,
 ul {
   list-style: none;
@@ -136,6 +132,13 @@ body {
   font-family: "Roboto", Tahoma, Geneva, sans-serif;
   font-size: 1em;
   line-height: 1.6;
+}
+
+@media (max-width: 900px) {
+  body {
+    width: 100vw;
+    height: 100vh;
+  }
 }
 
 code {
@@ -265,6 +268,34 @@ a:active {
   border: solid;
   border-width: 1px;
   border-color: #cdcdcd;
+}
+
+@media (max-width: 900px) {
+  .container {
+    display: none;
+  }
+}
+
+#underConstruction {
+  display: none;
+}
+
+@media (max-width: 900px) {
+  #underConstruction {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+
+    font-size: 21px;
+    line-height: 18px;
+  }
+
+  #underConstruction p {
+    margin-top: 10px;
+  }
 }
 
 #footer {
@@ -453,6 +484,12 @@ a:active {
   margin-left: 30px;
   width: 420px;
   height: 302px;
+}
+
+@media (max-width: 900px) {
+  #twitterWrapper {
+    display: none;
+  }
 }
 
 #twitterTitle {
@@ -1032,6 +1069,14 @@ a:active {
 #slider {
   background-color: rgba(135, 206, 250, 0.17);
 }
+
+@media (max-width: 900px) {
+  #slider a img {
+    height: 100% !important;
+    width: 100% !important;
+  }
+}
+
 
 #sliderCont {
   padding-bottom: 0px;
