--- a/css/style.css
+++ b/css/style.css
@@ -136,8 +136,10 @@ body {
 
 @media (max-width: 900px) {
   body {
-    width: 100vw;
+    /* width: 100vw; */
     height: 100vh;
+
+    padding: 10px;
   }
 }
 
@@ -286,15 +288,17 @@ a:active {
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    text-align: center;
     width: 100%;
     height: 100%;
 
     font-size: 21px;
     line-height: 18px;
+
   }
 
   #underConstruction p {
-    margin-top: 10px;
+    margin-top: 20px;
   }
 }
 
