--- a/css/style.css
+++ b/css/style.css
@@ -134,14 +134,14 @@ body {
   line-height: 1.6;
 }
 
-@media (max-width: 900px) {
+/* @media (max-device-width: 900px) {
   body {
-    /* width: 100vw; */
-    height: 100vh;
+    width: 100%;
+    height: 100%;
 
     padding: 10px;
   }
-}
+} */
 
 code {
   display: block;
@@ -272,17 +272,17 @@ a:active {
   border-color: #cdcdcd;
 }
 
-@media (max-width: 900px) {
+/* @media (max-device-width: 900px) {
   .container {
     display: none;
   }
-}
+} */
 
 #underConstruction {
   display: none;
 }
 
-@media (max-width: 900px) {
+/* @media (max-device-width: 900px) {
   #underConstruction {
     display: flex;
     justify-content: center;
@@ -300,7 +300,7 @@ a:active {
   #underConstruction p {
     margin-top: 20px;
   }
-}
+} */
 
 #footer {
   position: relative;
@@ -490,11 +490,11 @@ a:active {
   height: 302px;
 }
 
-@media (max-width: 900px) {
+/* @media (max-device-width: 900px) {
   #twitterWrapper {
     display: none;
   }
-}
+} */
 
 #twitterTitle {
   font-size: 21px;
@@ -1074,12 +1074,12 @@ a:active {
   background-color: rgba(135, 206, 250, 0.17);
 }
 
-@media (max-width: 900px) {
+/* @media (max-device-width: 900px) {
   #slider a img {
     height: 100% !important;
     width: 100% !important;
   }
-}
+} */
 
 
 #sliderCont {
